clusters/psb/apps/external/doco-cd/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: doco-cd
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: doco-cd
subsets:
  - addresses:
      - ip: 10.1.1.12
    ports:
      - port: 8080
        name: http
